# terminal-workspace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  step2.md  step2_feedback.md  step3.md  step5.md
.github/workflows/: ci.yml  pages.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: core_infra_test.rs  cqrs_slice_test.rs
crates/app/wix/: main.wxs
crates/assistant/: Cargo.toml
crates/assistant/src/: lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/integration/: Cargo.toml
crates/integration/src/: calendar.rs  github.rs  lib.rs  polling.rs  slack.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: buffer.rs  lib.rs  redact.rs  spans.rs
crates/notifications/: Cargo.toml
crates/notifications/examples/: notify_probe.rs
crates/notifications/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/plugin-sdk/wit/: plugin-sdk.wit
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: encrypted_file.rs  keyring_provider.rs  lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: keyboard.rs  lib.rs  render.rs  state.rs  theme.rs
docs/: README.md
docs/01-product/: features.md  product-requirements.md  roadmap.md  screen-spec.md  user-flows.md  vision.md
docs/02-architecture/: architecture.md  command-model.md  commands.md  events.md  keyboard.md  theme.md  ui.md
docs/03-domain/: api.md  assistant.md  bounded-context.md  domain-model.md  scheduler.md  workspace-state.md
docs/04-extensions/: capability-system.md  integration-contract.md  notification-pipeline.md  permission-model.md  plugin-lifecycle.md  plugin-sdk.md  plugins.md  security.md  state-machine.md
docs/04-extensions/integrations/: calendar.md  github.md  gmail.md  jira.md  slack.md
docs/05-operations/: configuration.md  error-catalog.md  error-handling.md  logging.md  metrics.md  migration.md  performance.md  storage.md  testing-strategy.md  testing.md  versioning.md
docs/06-development/: development.md  platform-support.md
docs/06-development/decisions/: 0001-architecture.md  0002-plugin-system.md  0003-event-bus.md  0004-storage.md  0005-technology-stack.md  0006-secret-provider.md  0007-cqrs.md  0008-ddd.md  0009-plugin-sdk.md  0010-registry-pattern.md  0011-notification-pipeline.md  0012-docking-system.md  0013-rule-engine.md  0014-storage-engine-reconsideration.md  0015-release-packaging.md  0016-event-enum-extension.md  0017-plugin-runtime-c-compiler-exception.md
docs/07-implementation-log/: step10.md  step11.md  step12.md  step13.md  step14.md  step15.md  step16.md  step17.md  step18.md  step19.md  step20.md  step21.md  step22.md  step23.md  step24.md  step25.md  step26.md  step27.md  step28.md  step29.md  step30.md  step31.md  step32.md  step33.md  step34.md  step35.md  step36.md  step37.md  step38.md  step39.md  step4.md  step40.md  step41.md  step42.md  step43.md  step44.md  step45.md  step46.md  step5.md  step6.md  (+3 more)
examples/plugins/hello/: Cargo.toml
examples/plugins/hello/src/: lib.rs
examples/plugins/looper/: Cargo.toml
examples/plugins/looper/src/: lib.rs
examples/plugins/memhog/: Cargo.toml
examples/plugins/memhog/src/: bindings.rs  lib.rs
examples/plugins/presence-checker/: Cargo.toml
examples/plugins/presence-checker/src/: bindings.rs  lib.rs
scripts/: setup.ps1  setup.sh
website/: index.html
