[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/common",
    "crates/domain",
    "crates/events",
    "crates/commands",
    "crates/services",
    "crates/registry",
    "crates/storage",
    "crates/config",
    "crates/secrets",
    "crates/logging",
    "crates/ui",
    "crates/plugin-host",
    "crates/plugin-sdk",
    "crates/ipc",
    "crates/integration",
    "crates/scheduler",
    "crates/assistant",
    "crates/notifications"
]
# Example plugins are built independently via `cargo component build`
# (`step14.md` Decision 2), targeting wasm32 with `crate-type = ["cdylib"]`
# -- not part of `cargo check --workspace`'s native-target build, so they
# stay out of the root workspace rather than needing per-crate
# `--exclude`/target juggling in every workspace-wide cargo invocation.
exclude = ["examples/plugins/hello", "examples/plugins/looper", "examples/plugins/memhog", "examples/plugins/presence-checker"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Terminal Workspace Team"]
repository = "https://github.com/HwangSlater/terminal-workspace"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
redb = "2"
reqwest = { version = "0.11", features = ["json"] }
keyring = { version = "4", default-features = false, features = ["v1", "windows-native-keyring-store", "apple-native-keyring-store", "zbus-secret-service-keyring-store"] }
aes-gcm = "0.11"
notify-rust = "4.18"

# Shared Workspace Lints
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
