[package]
name = "commands"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
events = { path = "../events" }
logging = { path = "../logging" }
integration = { path = "../integration" }
scheduler = { path = "../scheduler" }
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
