[package]
name = "events"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
logging = { path = "../logging" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
