[package]
name = "integration"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
events = { path = "../events" }
secrets = { path = "../secrets" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v5"] }
reqwest.workspace = true
secrecy.workspace = true
