[package]
name = "logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
serde.workspace = true
