[package]
name = "plugin-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
plugin-sdk = { path = "../plugin-sdk" }
registry = { path = "../registry" }
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
