[package]
name = "plugin-host"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
events = { path = "../events" }
plugin-sdk = { path = "../plugin-sdk" }
registry = { path = "../registry" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
wasmtime = { version = "46.0.1", default-features = false, features = ["component-model", "cranelift", "runtime"] }

[dev-dependencies]
uuid.workspace = true
tracing-subscriber.workspace = true
