[package]
name = "secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
secrecy.workspace = true
async-trait.workspace = true
keyring.workspace = true
aes-gcm.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
