[package]
name = "services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
events = { path = "../events" }
commands = { path = "../commands" }
async-trait.workspace = true
