[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
redb.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
tokio.workspace = true
