[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
commands = { path = "../commands" }
registry = { path = "../registry" }
ratatui.workspace = true
crossterm.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
