[package]
name = "ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
commands = { path = "../commands" }
registry = { path = "../registry" }
integration = { path = "../integration" }
events = { path = "../events" }
logging = { path = "../logging" }
scheduler = { path = "../scheduler" }
ratatui.workspace = true
crossterm.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.1"

[dev-dependencies]
uuid.workspace = true
